--- a/esox/src/style/index.css
+++ b/esox/src/style/index.css
@@ -291,6 +291,12 @@ h1 {
     box-shadow: 6px 4px 14px -12px rgba(0,0,0,0.75);
 }
 
+.esox__sidebar.right {
+    -webkit-box-shadow: -6px 4px 14px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: -6px 4px 14px -12px rgba(0,0,0,0.75);
+    box-shadow: -6px 4px 14px -12px rgba(0,0,0,0.75);
+}
+
 .esox__main {
     flex-grow: 14;
     padding: 0.4rem 2rem;
@@ -298,7 +304,7 @@ h1 {
 }
 
 .ui.list>.item.discover__filter {
-    padding-left: 1rem;
+    padding: 0 1rem;
 }
 
 .ui.list>.item.discover__filter:hover {
@@ -339,9 +345,106 @@ h1 {
     width: 100%;
     border-radius: 0 0 5px 5px;
 }
+
 .step {
     background-color: #2575fc;
     height: 6px;
     width: 0;
     border-radius: 0 0 0 5px;
+}
+
+.courses__empty-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    font-size: 2rem;
+}
+
+.course__content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.course__presentation {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.course__thumbnail {
+    width: 72px;
+    height: 72px;
+    border: 1px solid black;
+    border-radius: 36px;
+}
+
+.course__title {
+    padding-left: 1rem;
+    font-size: 2rem;
+}
+
+.course__actions {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+}
+
+.course__action_button {
+    display: flex;
+    align-items: center;
+}
+
+.course__action_info {
+    font-size: 1.5rem;
+    padding-left: 1rem;
+}
+
+.course__action-loggedOut {
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.course__header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.course__action_play {
+    display: flex;
+    align-items: center;
+}
+
+.course__action_play-title {
+    font-size: 1.5rem;
+    padding-left: 1rem;
+}
+
+.course__friends {
+    padding: 1rem 0;
+}
+
+.friends__divider {
+    height: 5px;
+    -webkit-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px 3px 4px -2px rgba(0,0,0,0.75);
+    width: calc(100% + 4rem);
+    border-bottom: 1px solid #cacaca;
+    transform: translateX(-2rem);
+}
+
+.course__friends_title {
+    font-size: 1.5rem;
+}
+
+.friends__thumbnail {
+    margin-right: 1rem;
+}
+
+.course__friends-loggedOut {
+    font-size: 1.5rem;
+    text-align: center;
+    padding: 2rem 0;
 }
