--- a/esox/src/style/index.css
+++ b/esox/src/style/index.css
@@ -529,3 +529,14 @@ h1 {
     padding: 0 1rem;
     font-size: 1rem;
 }
+
+.tutorial__frame {
+    height: calc(100vh - 6rem - 4px);
+    width: 100%;
+}
+
+.frame {
+    width:100%;
+    height:100%;
+    border: 0;
+}
