--- a/Scholarly HTML/style/scholarly.css
+++ b/Scholarly HTML/style/scholarly.css
@@ -99,3 +99,27 @@ p.issue {
     margin: 0 2em;
   }
 }
+
+article.usabilityTest {background-color: #fff; border:solid 1px #493736; float:left; margin:5px 10px; width:100%; }
+article.usabilityTestResults {background-color: #fff; border:solid 1px #493736; float:left; margin:5px 10px; width:100%; }
+.usabilityTestInfo figure {margin:0; padding: 0;}
+.usabilityTestInfo, .usabilityTestResultsInfo {border-bottom:solid 1px #493736; padding:5px; overflow: hidden;}
+.usabilityTestInfo img {float:left; }
+.usabilityTestInfo .usabilityTestBackground {float:left; width:100%;}
+.usabilityTestInfo h3, .usabilityTestInfo .usabilityTestBackground h4, .usabilityTestInfo .usabilityTestBackground h5, .usabilityTestObjectives h5,.usabilityTestDetails h4, .usabilityTestDetails h5, .usabilityTestScenarios h5, .otherDetails h5, .usabilityTestResults h5, .usabilityTestResults h4, .usabilityTestResults h3 {margin:0 0 5px; padding:5px; background-color: #2D2D29; color: #DFECE6; }
+.usabilityTestInfo .usabilityTestBackground ul, .usabilityTestDetails ul, .usabilityTestScenarios ul, .otherDetails ul, .usabilityTestResults ul {margin:0; padding:0 5px;}
+.usabilityTestInfo p, .usabilityTestDetails p, .usabilityTestScenarios p, .otherDetails p, .usabilityTestObjectives p, .usabilityTestResults p {margin:2px; padding:0;}
+
+.usabilityTestDetails ul li, .usabilityTestObjectives ul li, .usabilityTestResults ul li {list-style-type: square; margin:0 0 0 15px;}
+.usabilityTestDetails {border-bottom:solid 1px #493736; overflow: hidden; padding: 5px;}
+.usabilityTestDetails .detailsLeft h5 {padding: 5px;}
+.usabilityTestDetails .detailsLeft {width:49%; float:left; margin-right:5px;}
+.usabilityTestDetails .detailsLeft .leftGroup {}
+.usabilityTestDetails .detailsRight {width:49%; float: right; }
+
+.usabilityTestScenarios, .otherDetails, .usabilityTestObjectives {clear:both; padding:5px; overflow: hidden;}
+.usabilityTestScenarios, .usabilityTestObjectives {border-bottom:solid 1px #493736;}
+
+.testTable {border-collapse:collapse; width:100%;}
+.testTable .testTableTh {border:1px solid #ccc; padding:3px; background-color:#ddd; text-align:center;}
+.testTable .testTableTd {border:1px solid #ccc; padding:3px;}
