--- a/esox/src/style/index.css
+++ b/esox/src/style/index.css
@@ -210,7 +210,7 @@ h1 {
     outline: none;
     cursor: pointer;
     transition: all .15s;
-    color: white;
+    color: #030303;
     font-size: 0.8rem;
 }
 
@@ -318,7 +318,7 @@ h1 {
 }
 
 .ui.discover__filter_divider {
-    color: #e67e22;
+    color: #8A3200;/*#e67e22;*/
 }
 
 .filter__underline {
